@@ -1,5 +1,6 @@
 v3.4.1:
   - Fixed lore-contains-regex metadata for custom item
+  - Added configurable worlds for illegal-stacks
 --------------------------------------------
 v3.4:
   - Added mending action (MC>=1.13): when a player has an item repaired via the mending enchantment;
